k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wall-mockup
  labels:
    app: wall-mockup
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: wall-mockup
